--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -1,3 +1,19 @@
+<div class="splash-image {{> header_splash}}">
+    <div class="container-fluid">
+        <div class="mdc-layout-grid">
+            {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+            <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
+            {{else}}
+            <h1 class="header-text">
+                <span class="header-text-banner">
+                    Booking: {{{primaryResponse.hits.hits.[0]._source.title}}}
+                </span>
+            </h1>
+            {{/if}}
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid">
     <ul class="breadcrumbs">
         <li><a href="/">Home</a></li>
