--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -58,7 +58,7 @@
                                 <div class="mdc-textfield" data-mdc-auto-init="MDCTextfield">
                                     <input type="text" class="mdc-textfield__input white-text searchRoute" placeholder="Search" id="q" name="q">
                                 </div>
-                                <button type="submit" class="mdc-toolbar__icon" aria-label="Search" alt="Search">
+                                <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search" aria-label="Search" alt="Search">
                                     <span class="fa fa-search" aria-hidden="true"></span>
                                 </button>
                             </form>
