Fix for goodhq test

--- a/functions/test-db/json2/goodhq/templates/home.hbs
+++ b/functions/test-db/json2/goodhq/templates/home.hbs
@@ -27,19 +27,19 @@
                 </div>
                 <div class="home-buttons row">
                     <div class="col-xs-12 col-sm-4 tight">
-                        <button class="btn btn-icon btn-inverse" href="/search?type=causes">
+                        <button class="btn btn-icon btn-inverse" href="/search?type=goodhq-organisation">
                             <span class="glyphicon glyphicon-edit left" aria-hidden="true"></span>
                             Review
                         </button>
                     </div>
                     <div class="col-xs-12 col-sm-4 tight">
-                        <button class="btn btn-icon btn-inverse" href="/search?type=volopps">
+                        <button class="btn btn-icon btn-inverse" href="/search?type=milo-volunteering-opportunity">
                             <span class="glyphicon glyphicon-thumbs-up left" aria-hidden="true"></span>
                             Volunteer
                         </button>
                     </div>
                     <div class="col-xs-12 col-sm-4 tight">
-                        <button class="btn btn-icon btn-inverse" href="/search?type=jobs">
+                        <button class="btn btn-icon btn-inverse" href="/search?type=goodmoves-legacy">
                             <span class="glyphicon glyphicon-briefcase left" aria-hidden="true"></span>
                             Work
                         </button>
