--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -640,9 +640,19 @@ a:hover {
     padding: 0 0 $spacing-unit/2;
     font-weight: 600 !important;
 }
-.mdc-card__actions .mdc-card__action {
-    font-weight: 800;
-    font-size: 0.9rem;
+.mdc-card__actions {
+    .mdc-card__action {
+        font-weight: 800;
+        font-size: 0.9rem;
+    }
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        .mdc-card__action {
+            width: 100%;
+        }
+    }
 }
 .photo-wee,
 .mdc-card__media-item {
