--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -6,7 +6,7 @@
             {{else}}
             <h1 class="header-text">
                 <span class="header-text-banner">
-                    Booking: {{{primaryResponse.hits.hits.[0]._source.title}}}
+                    Training &amp; events
                 </span>
             </h1>
             {{/if}}
