--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -646,11 +646,16 @@ a:hover {
         font-size: 0.9rem;
     }
     ul {
+        width: 100%;
         list-style-type: none;
         margin: 0;
         padding: 0;
-        .mdc-card__action {
+        li .mdc-card__action {
             width: 100%;
+            margin-bottom: $spacing-unit/2;
+        }
+        li:last-child .mdc-card__action {
+            margin-bottom: 0;
         }
     }
 }
