--- a/functions/test-db/json2/goodhq/templates/profile-jobs.hbs
+++ b/functions/test-db/json2/goodhq/templates/profile-jobs.hbs
@@ -7,23 +7,23 @@
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                    <a href="/{{params.path}}">About</a>
+                    <a href="/{{primaryResponse.hits.hits.[0]._source.xid}}">About</a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                    <a href="/{{params.path}}/volopps">Get involved</a>
+                    <a href="/{{primaryResponse.hits.hits.[0]._source.xid}}/volopps">Get involved</a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                    <a href="/{{params.path}}/reviews">Reviews</a>
+                    <a href="/{{primaryResponse.hits.hits.[0]._source.xid}}/reviews">Reviews</a>
                 </div>
             </div>
         </div>
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                    <a href="/{{params.path}}/volopps">Volunteer</a>
+                    <a href="/{{primaryResponse.hits.hits.[0]._source.xid}}/volopps">Volunteer</a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                    <a href="/{{params.path}}/jobs">Work</a>
+                    <a href="/{{primaryResponse.hits.hits.[0]._source.xid}}/jobs">Work</a>
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                     &nbsp;
