--- a/functions/test-db/json2/scvo/templates/page.hbs
+++ b/functions/test-db/json2/scvo/templates/page.hbs
@@ -6,7 +6,11 @@
             {{else}}
             <h1 class="header-text">
                 <span class="header-text-banner">
+                    {{#if primaryResponse.hits.hits.[0]}}
                     {{{primaryResponse.hits.hits.[0]._source.title}}}
+                    {{else}}
+                    404: Not found
+                    {{/if}}
                 </span>
             </h1>
             {{/if}}
@@ -20,9 +24,14 @@
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content page-content">
+                {{#if primaryResponse.hits.hits.[0]}}
                 {{#with primaryResponse.hits.hits.[0]._source}}
                 {{{rendered.full}}}
                 {{/with}}
+                {{else}}
+                <h2>Page not found</h2>
+                Please try searching.
+                {{/if}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
                 <!-- TBC -->
