--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -629,6 +629,7 @@ a:hover {
 .mdc-card__subtitle {
     font-size: 1rem;
 }
+.mdc-button,
 .mdc-card__subtitle {
     font-weight: 600;
 }
@@ -649,7 +650,7 @@ a:hover {
         width: 100%;
         list-style-type: none;
         margin: 0;
-        padding: 0;
+        padding: 0 $spacing-unit/2 $spacing-unit/2;
         li .mdc-card__action {
             width: 100%;
             margin-bottom: $spacing-unit/2;
@@ -709,7 +710,7 @@ a:hover {
 }
 
 .inline-list {
-    display: inline-block;
+    display: inline;
     margin: 0;
     padding: 0;
     li {
