--- a/functions/test-db/json2/scvo/templates/page-posts.hbs
+++ b/functions/test-db/json2/scvo/templates/page-posts.hbs
@@ -26,11 +26,12 @@
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
                 <h3 class="blogs">Our blog posts</h3>
-                <ul class="supplimentary-list">
+                <ul class="v-margin supplimentary-list">
                     {{#each supplimentaryResponses.related_posts.hits.hits}}
                     {{{_source.rendered.sidebar_mini}}}
                     {{/each}}
                 </ul>
+                <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
             </div>
         </div>
     </div>
