--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -13,7 +13,7 @@
             {{else}}
             <h1 class="header-text">
                 <span class="header-text-banner">
-                    {{{primaryResponse.hits.hits.[0]._source.title}}}
+                    {{{supplimentaryResponses.page.hits.hits.[0]._source.title}}}
                 </span>
             </h1>
             {{/if}}
