--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -850,20 +850,6 @@ ul.breadcrumbs {
         }
     }
 }
-.full .post-info {
-    margin: $spacing-unit/2 0 $spacing-unit*1.5;
-    border-bottom: 1px solid var(--mdc-theme-primary-fade);
-    padding: 0 0 $spacing-unit;
-}
-.full .page-info {
-    font-size: 0.9rem;
-    color: #777;
-    .page-info-updated {
-        margin: $spacing-unit*1.5 0 $spacing-unit/2;
-        border-top: 1px solid #aaa;
-        padding: $spacing-unit 0 0;
-    }
-}
 
 blockquote {
     float: right;
@@ -940,7 +926,7 @@ p:last-child {
     margin-bottom: 0;
 }
 .full {
-    margin: 0 0 $spacing-unit*1.5;
+    margin: $spacing-unit 0 $spacing-unit*1.5;
     h1:first-child,
     h2:first-child,
     h3:first-child,
@@ -949,6 +935,20 @@ p:last-child {
     }
     img {
         max-width: 100%;
+    }
+    .post-info {
+        margin: $spacing-unit/2 0 $spacing-unit*1.5;
+        border-bottom: 1px solid var(--mdc-theme-primary-fade);
+        padding: 0 0 $spacing-unit;
+    }
+    .page-info {
+        font-size: 0.9rem;
+        color: #777;
+        .page-info-updated {
+            margin: $spacing-unit*1.5 0 $spacing-unit/2;
+            border-top: 1px solid #aaa;
+            padding: $spacing-unit 0 0;
+        }
     }
 }
 .sidebar {
