Menus for digital sections

--- a/functions/test-db/json2/scvo/partials/menu-about.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-about.hbs
@@ -1,8 +1,8 @@
-<nav id="about-menu">
+<nav class="menu-sidebar" id="about-menu">
     {{#each context.menus.about}}
-    <a class="mdc-button" href="{{path}}">{{{label}}}</a>
+    <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
-    <a class="mdc-button" href="{{path}}">{{{label}}}</a>
+    <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
     {{/each}}
     {{/each}}
 </nav>
