--- a/functions/test-db/json2/scvo/templates/posts-page.hbs
+++ b/functions/test-db/json2/scvo/templates/posts-page.hbs
@@ -1,6 +1,6 @@
 <div class="splash-image {{> header_splash}}">
     <div class="container-fluid">
-        {{> breadcrumbs}}
+        {{> breadcrumbs_posts}}
 
         <div class="mdc-layout-grid">
             {{#if primaryResponse.hits.hits.[0]._source.header_text}}
