--- a/functions/test-db/json2/scvo/templates/credit-union.hbs
+++ b/functions/test-db/json2/scvo/templates/credit-union.hbs
@@ -24,7 +24,7 @@
                 {{{rendered.full}}}
                 {{/with}}
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 content sidebar page-sidebar">
                 {{> menu_credit_union}}
             </div>
         </div>
