--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -96,11 +96,13 @@ $nav-height: 2.5rem;
 }
 .services.credit-union {
     --mdc-theme-primary: #1976D2;
+    --mdc-theme-primary-fade: rgba(21, 101, 192, 0.89);
     --mdc-theme-primary-light: #1976D2;
     --mdc-theme-primary-dark: #145ea8;
 }
-.services.digital {
+.digital {
     --mdc-theme-primary: #0063AF;
+    --mdc-theme-primary-fade: rgba(21, 101, 192, 0.89);
     --mdc-theme-primary-light: #0063AF;
     --mdc-theme-primary-dark: #004f8c;
 }
