--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -3,7 +3,7 @@
         <div class="mdc-card">
             <section class="mdc-card__primary">
                 <h2 class="mdc-card__title mdc-card__title--large">Search SCVO</h2>
-                <form [searchroute]="'main-search'">
+                <form [searchroute]="'main_search'">
                     <div class="mdc-textfield">
                         <input type="text" class="mdc-textfield__input searchRoute" placeholder="Search" value="{{params.query.q}}" name="q" id="main-q">
                         <div class="mdc-textfield__bottom-line"></div>
