--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -2,9 +2,8 @@
     <div class="container-fluid">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
-            <li><a href="/services">Services</a></li>
-            <li><a href="/services/digital">Digital</a></li>
-            <li><a href="/services/digital/participation">Participation</a></li>
+            <li><a href="/digital">Digital</a></li>
+            <li><a href="/digital/participation">Participation</a></li>
         </ul>
 
         <div class="mdc-layout-grid">
