--- a/functions/test-db/json2/scvo/partials/menu-credit-union.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-credit-union.hbs
@@ -1,5 +1,5 @@
 <nav class="menu-sidebar" id="credit-union-menu">
-    {{#each context.menus.credit_union}}
+    {{#each context.menus.credit-union}}
     <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
     <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
