--- a/functions/test-db/json2/scvo/partials/menu-digital-evolution.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-digital-evolution.hbs
@@ -1,5 +1,5 @@
 <nav class="menu-sidebar" id="digital-evolution-menu">
-    {{#each context.menus.digital_evolution}}
+    {{#each context.menus.digital-evolution}}
     <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
     <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
