--- a/functions/test-db/json2/scvo/partials/menu-digital-innovation.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-digital-innovation.hbs
@@ -1,5 +1,5 @@
 <nav class="menu-sidebar" id="digital-innovation-menu">
-    {{#each context.menus.digital_innovation}}
+    {{#each context.menus.digital-innovation}}
     <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
     {{#each this.children}}
     <a class="mdc-button mdc-button--raised" href="{{path}}">{{{label}}}</a>
