--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -598,8 +598,8 @@ a:hover {
         font-size: 3rem;
         font-weight: 400;
         letter-spacing: -0.08rem;
-        line-height: 3rem;
-        margin-bottom: $spacing-unit/4;
+        line-height: $spacing-unit*3;
+        margin-bottom: $spacing-unit/2;
         .mdc-typography--caption {
             font-size: 1.2rem;
         }
@@ -659,6 +659,45 @@ a:hover {
     margin: 0;
     padding: 0 0 $spacing-unit/2;
     font-weight: 600 !important;
+}
+.scvo-cms-page-20090 {
+    h1 {
+        margin-bottom: $spacing-unit;
+    }
+}
+.support.support-sector {
+    .mdc-card__media {
+        h1 {
+            display: none;
+        }
+    }
+    .mdc-card__media {
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    .mdc-card__media.goodmoves {
+        background-color: #58a934;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/goodmoves-banner.png');
+    }
+    .mdc-card__media.funding-scotland {
+        background-color: #8AC645;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/funding-scotland-banner.png');
+    }
+    .mdc-card__media.goodhq {
+        background-color: #4033E9;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/goodhq-banner.png');
+    }
+    .mdc-card__media.tfn {
+        background-color: #3b9db1;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/tfn-banner.png');
+    }
+    .mdc-card__media.credit-union {
+        background-color: #1976D2;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/credit-union-banner.png');
+    }
+    .mdc-card__supporting-text {
+        padding-top: $spacing-unit;
+    }
 }
 .mdc-card__actions {
     .mdc-card__action {
