--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1195,3 +1195,13 @@ footer {
         padding-top: $spacing-unit*4;
     }
 }
+
+@media screen and (max-width: 839px) {
+    html {
+        font-size: 0.92rem;
+        line-height: 1.25;
+    }
+    .breadcrumbs {
+        font-size: 85%;
+    }
+}
