Added staff info to digital about page

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -636,6 +636,13 @@ a:hover {
     display: none;
 }
 
+.digital.about {
+    .scvo-staff-photo-wee {
+        height: 64px;
+        width: 64px;
+    }
+}
+
 .scvo-event {
     .mdc-layout-grid__inner {
         margin-bottom: $spacing-unit/2;
