Added related posts to all pages

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -445,7 +445,6 @@ a:hover {
                 .mdc-tab {
                     min-width: auto;
                     font-weight: 600;
-                    padding: 0 $spacing-unit/2;
                 }
             }
         }
@@ -637,6 +636,9 @@ a:hover {
 }
 
 .digital.about {
+    .page-info {
+        display: none;
+    }
     .scvo-staff-photo-wee {
         height: 64px;
         width: 64px;
@@ -668,9 +670,12 @@ a:hover {
     font-weight: 600 !important;
 }
 .scvo-cms-page-20090 {
-    h1 {
+    h1.mdc-typography--title {
         margin-bottom: $spacing-unit;
     }
+}
+.mdc-card__primary .mdc-card__title--large {
+    padding-top: 0;
 }
 .support.support-sector {
     .mdc-card__media {
@@ -705,6 +710,28 @@ a:hover {
     }
     .mdc-card__supporting-text {
         padding-top: $spacing-unit;
+    }
+}
+.projects {
+    .mdc-card__media {
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 64px;
+    }
+    .mdc-card__media.digital {
+        background-color: #58a934;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/goodmoves-banner.png');
+    }
+}
+.campaigns {
+    .mdc-card__media {
+        background-size: contain;
+        background-repeat: no-repeat;
+        height: 64px;
+    }
+    .mdc-card__media.europe-and-the-third-sector {
+        background-color: #58a934;
+        background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/goodmoves-banner.png');
     }
 }
 .mdc-card__actions {
