--- a/functions/test-db/json2/scvo/templates/page.hbs
+++ b/functions/test-db/json2/scvo/templates/page.hbs
@@ -34,7 +34,15 @@
                 {{/if}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
-                <!-- TBC -->
+                {{#if supplimentaryResponses.related_posts.hits.hits}}
+                <h3 class="blogs">Related posts</h3>
+                <ul class="v-margin supplimentary-list">
+                    {{#each supplimentaryResponses.related_posts.hits.hits}}
+                    {{{_source.rendered.sidebar_mini}}}
+                    {{/each}}
+                </ul>
+                <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
+                {{/if}}
             </div>
         </div>
     </div>
